2012-05-02

	* src/inc.c: use a flag to distinguish the state of activity.

2012-04-27

	* src/compose.c: cancel sending if new mail check is running.

2012-04-24

	* src/about.c: updated copyright year.

2012-04-23

	* libsylph/utils.[ch]
	  libsylph/libsylph-0.def: added play_sound() function (works only on
	  Windows).
	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/inc.c: win32: added an option to play sound when new messages
	  arrive.

2012-04-20

	* libsylph/imap.c: imap_remove_msgs_by_seq_set(): workaround for
	  a broken IMAP server (Yahoo! Mail) which cannot fetch messages
	  right after EXPUNGE.

2012-04-18

	* src/update_check.c: removed compiler warnings caused by usage of
	  gboolean as gpointer (thanks to Ricard Mones).

2012-04-18

	* addr_compl.c: fixed Bug #52: Address autocomplete: Not possible to
	  select drop-down list element with arrow keys (Linux)
	  Possibly occured with GTK+ >= 2.24.

2012-04-18

	* src/addressbook.c: addressbook_list_button_pressed():
	  fixed Bug #47: Address book: Cancel editing contact results in
	  click-and-drag behaviour

2012-04-13

	* version 3.2.0beta7

2012-04-13

	* src/mimeview.c: mimeview_save_part_as(): fixed a bug that a MIME
	  part that didn't have a name could not be saved.

2012-04-13

	* libsylph/prefs_common.[ch]
	  src/filesel.[ch]: preserve the last selected folders between
	  sessions.

2012-04-12

	* src/inc.c: show the detail of new messages on the trayicon tooltip.

2012-04-12

	* src/addressbook.[ch]
	  src/addr_compl.c: also use first and last name for completion.

2012-04-11

	* src/addr_compl.c: also match to the subsequent part of the name of
	  contacts (Bug #51).

2012-04-11

	* nsis/sylpheed-defs.nsh
	  nsis/sylpheed.nsi
	  nsis/english.nsh
	  nsis/japanese.nsh: abort installation if auto-uninstall was
	  cancelled or failed.
	  Added SylFilter in the installer.

2012-03-27

	* src/textview.c: don't open in-page link of HTML mail.

2012-03-26
