@@ -1,5 +1,12 @@
 2012-05-02
 
+	* src/compose.c: when queueing messages or saving to draft folder,
+	  disable them while mail checking only if queue or draft folder is
+	  on IMAP server.
+	* src/mainwindow.c: disabled Send button while mail check is running.
+
+2012-05-02
+
 	* src/inc.c: use a flag to distinguish the state of activity.
 
 2012-04-27
